--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="action_settings">Settings</string>
     <string name="user_name">User Name</string>
     <string name="body">Body</string>
+    <string name="tvScreenName">\@Screen Name</string>
 
 </resources>
