New UserTimeLine Fragment, and new Endpoints for querying UserTimeLine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_tweet_detail">Tweet Detail</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_profile">Profile</string>
 
 </resources>
