Tweet Detail, Add FavCount, RetweetCount, Reply

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="tvTweets">Tweets</string>
     <string name="tvFollowing">Following</string>
     <string name="tvFollowers">Followers</string>
+    <string name="tvRetweets">Retweets</string>
+    <string name="tvFavorites">Favorites</string>
 
 </resources>
